# Novamedika-LTS

./: $null  .clinerules  .cursorrules  .env.deploy  .env.example  .gitattributes  .gitignore  AI-OPTIMIZATION-GUIDE.md  AI-QUICK-START.md  AUTOMATED_DEPLOYMENT.md  CICD-SECURITY-INTEGRATION.md  CONFIGURATION-SUMMARY.md  CONSENT-CHECKBOXES-UPDATE.md  CONSENT-MODAL-FIX.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-MONITORING-ENHANCEMENT.md  DEPLOYMENT_CHECKLIST_PHARMACIST.md  DEPLOYMENT_READY.md  DEPLOYMENT_TELEGRAM_AUTH_FIX.md  DIAGNOSTICS_GUIDE.md  EMERGENCY-ACTION-PLAN.md  FIX_DUPLICATE_REFRESH_TOKEN.md  FIX_PHARMACIST_DASHBOARD_ACCESS.md  FIX_PHARMACIST_DASHBOARD_ACCESS_EN.md  FIX_PHARMACIST_DASHBOARD_SEPARATION.md  IMMEDIATE_ACTION_TELEGRAM_AUTH.md  IMPLEMENTATION_SUMMARY.md  OAC-COMPLIANCE-STATUS-REPORT.md  OAC-FREE-SOLUTIONS.md  OAC-VISUAL-PROGRESS.md  PHARMACIST_DASHBOARD_LOG_ANALYSIS.md  PHARMACIST_DASHBOARD_LOG_ANALYSIS_RU.md  PHARMACIST_PATH_ROUTING_SUMMARY.md  PHARMACIST_ROUTING_ARCHITECTURE.md  PHARMACIST_WEBAPP_ARCHITECTURE.md  PHARMACIST_WEBAPP_DEPLOYMENT.md  PHARMACIST_WEBAPP_SPEC.md  PHARMACIST_WEBAPP_SUMMARY.md  PRODUCTION_DEPLOYMENT_QUICK_REF.md  QUICK_FIX_PHARMACIST_WEBAPP.md  (+29 more)
.clinerules/: rules.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  celery-entrypoint.sh  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 319072f585af_add_consent_fields_to_users.py  3b81fefeff37_add_encrypted_fields_for_personal_data.py  68197b075a41_add_email_and_password_fields_to_users.py  6cfa51de7ac5_add_audit_logs_table.py  (+7 more)
backend/src/: main.py
(+353 files in other folders)
