[project]
name = "novamedika-backend"
version = "0.1.0"
description = "Novamedika Backend API"
authors = [{ name = "Aleksandr Andreev", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "gunicorn",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",
    "python-multipart>=0.0.6",
    "celery[redis]>=5.3.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "flower>=1.0",
    "pandas>=2.1.3" 
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

